# recipesWebApp

./: .gitignore
app-back/: README.rst  pyproject.toml
app-back/app_back/: .create.sh  .destroy.sh  .install.sh  .reset.sh  .start.sh  main.py  populate_db.py  start_db.py
app-back/app_back/config/: database.py
app-back/app_back/constants/: database.py
app-back/app_back/models/: recipes.py  response.py
app-back/app_back/repositories/: recipes.py
app-back/app_back/services/: recipes.py
app-back/tests/: test_app_back.py
app-front/: README.md  package-lock.json  package.json
app-front/src/: App.tsx  client.tsx  values.js
app-front/src/components/: feed.css  feed.tsx  model.tsx
